# Advance-RAG--retrieval-augmented-generation-

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
0-DataIngestParsing/: 1-dataingestion.ipynb
0-DataIngestParsing/data/docx/: will.docx
0-DataIngestParsing/data/text_files/: machine_learning.txt  python_intro.txt
Agents/: context_management_strategy.ipynb  human_in_the_loop.ipynb  langchain_agent_basic.ipynb
DataIngestParsing/: dataingestion.ipynb  fnx_test.db
DataIngestParsing/data/csv_excel/: Problems_with_CMT.csv  cars_table.xlsx  policies_table.xlsx  users_table.xlsx
DataIngestParsing/data/database/: sample.db
DataIngestParsing/data/docx/: terms_and_condition_young_app.docx
LangGraph/: basic_chatbot.ipynb  basic_graph.ipynb  basic_graph_with_chema.ipynb
Pydantic/: agent_structured_output.ipynb  structured_output.ipynb
VectorEmbedding/: embedding.ipynb
VectorStoreAndVectorDatabase/: app.py  chromadb.ipynb  fnx.ipynb  fnx.py  terms_condition.ipynb  terms_condition_adv.ipynb
VectorStoreAndVectorDatabase/chroma_db_store/7c1816c6-c8bc-439b-b91c-6c17ea2fa47b/: index_metadata.pickle
vision/: basic.ipynb
